force-app/main/default/objects/Process_Attribute__c/Process_Attribute__c.object-meta.xml
<CustomObject>
    <description>To define the master records of case/lead/sales/collection processes</description>
    <label>Process Attribute</label>
    <nameField>
        <label>Attribute ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>