force-app/main/default/objects/Process_Attribute__c/fields/Case_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Category__c</fullName>
    <label>Case Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Sub_Category</valueSetName>
    </valueSet>
</CustomField>