force-app/main/default/objects/Process_Attribute__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <description>The different channels/mode/method/origin a resource (Human or system) connects with NAC system. Lead (Lead Channel - custom field) and Case (Case Origin - Standard Field)</description>
    <label>Channels/Origin/Mode/Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channels</valueSetName>
    </valueSet>
</CustomField>