force-app/main/default/objects/Process_Attribute__c/fields/Close_Previous_Task__c.field-meta.xml
<CustomField>
    <fullName>Close_Previous_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Previous Task</label>
    <type>Checkbox</type>
</CustomField>