force-app/main/default/objects/Process_Attribute__c/fields/Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Process_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>