force-app/main/default/objects/Process_Attribute__c/fields/Default_Queue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue_Owner__c</fullName>
    <label>Default Queue Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>