force-app/main/default/objects/Process_Attribute__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To identify is the process is active or not</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>