force-app/main/default/objects/Process_Attribute__c/fields/Lead_Product_Interested__c.field-meta.xml
<CustomField>
    <fullName>Lead_Product_Interested__c</fullName>
    <description>To capture the product details for which the lead is created.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>