force-app/main/default/objects/Process_Attribute__c/fields/Process_Attribute_Path_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Path_Deviation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Path Deviation</label>
    <referenceTo>Process_Attribute_Path_Deviation__c</referenceTo>
    <relationshipLabel>Process Attributes</relationshipLabel>
    <relationshipName>Process_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>