force-app/main/default/objects/Process_Attribute__c/fields/Process_Path__c.field-meta.xml
<CustomField>
    <fullName>Process_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Process Path</label>
    <referenceTo>Process_Path__c</referenceTo>
    <relationshipLabel>Process Attributes</relationshipLabel>
    <relationshipName>Process_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>