force-app/main/default/objects/Process_Attribute__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <inlineHelpText>SLA in minutes</inlineHelpText>
    <label>SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>