force-app/main/default/objects/Process_Attribute__c/fields/Sobject_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_RecordType_Name__c</fullName>
    <defaultValue>&apos;Master&apos;</defaultValue>
    <label>Sobject RecordType Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do Onboarding</fullName>
            </value>
            <value>
                <fullName>Business Team EL</fullName>
            </value>
            <value>
                <fullName>Business Team AltiFi</fullName>
            </value>
            <value>
                <fullName>Welcome Calling Details - DO</fullName>
            </value>
            <value>
                <fullName>Welcome Calling Details - EL</fullName>
            </value>
            <value>
                <fullName>Welcome Calling Details - LAP</fullName>
            </value>
            <value>
                <fullName>Welcome Calling Details - Altifi</fullName>
            </value>
            <value>
                <fullName>Customer Service Investment</fullName>
            </value>
            <value>
                <fullName>Business Team LAP</fullName>
            </value>
            <value>
                <fullName>NU Score Payment Schedule Creation</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>