force-app/main/default/objects/Process_Attribute__c/fields/Sources__c.field-meta.xml
<CustomField>
    <fullName>Sources__c</fullName>
    <description>Different sources record Generation - to be used in Lead (Lead Source - standard field) and Cases (case_source__c Custom Field)</description>
    <label>Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sources</valueSetName>
    </valueSet>
</CustomField>