force-app/main/default/objects/Process_Attribute__c/recordTypes/Case_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Case_Attribute</fullName>
    <active>true</active>
    <description>Attributes related to case of query type</description>
    <label>Case Attribute</label>
</RecordType>