force-app/main/default/objects/Process_Attribute__c/recordTypes/Lead_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Lead_Attribute</fullName>
    <active>true</active>
    <description>Attributes for Lead process</description>
    <label>Lead Attribute</label>
</RecordType>