force-app/main/default/objects/Process_Attribute__c/recordTypes/Lead_Attributes.recordType-meta.xml
<RecordType>
    <fullName>Lead_Attributes</fullName>
    <active>true</active>
    <description>Attributes for Lead process</description>
    <label>Lead Attributes</label>
</RecordType>