force-app/main/default/objects/Process_Attribute__c/recordTypes/Opportunity_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Attribute</fullName>
    <active>true</active>
    <label>Opportunity Attribute</label>
</RecordType>