force-app/main/default/objects/Process_Attribute__c/recordTypes/Task_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Task_Attribute</fullName>
    <active>true</active>
    <description>For manully created direct tasks</description>
    <label>Task Attribute</label>
</RecordType>