force-app/main/default/objects/Process_Attribute__c/listViews/Case_Attributes.listView-meta.xml
<ListView>
    <fullName>Case_Attributes</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Type__c</columns>
    <columns>Case_Category__c</columns>
    <columns>Case_Sub_Category__c</columns>
    <columns>Lead_Product_Interested__c</columns>
    <columns>isActive__c</columns>
    <columns>SLA__c</columns>
    <columns>Sobject_RecordType_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Case</value>
    </filters>
    <label>Case Attributes</label>
</ListView>