force-app/main/default/objects/Process_Attribute__c/listViews/Lead_Attributes.listView-meta.xml
<ListView>
    <fullName>Lead_Attributes</fullName>
    <columns>NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>Lead_Product_Interested__c</columns>
    <columns>isActive__c</columns>
    <columns>SLA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Lead Attributes</label>
</ListView>