force-app/main/default/objects/Process_Attribute__c/listViews/Opportunity_Attributes.listView-meta.xml
<ListView>
    <fullName>Opportunity_Attributes</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>isActive__c</columns>
    <columns>SLA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity Attributes</label>
</ListView>